Fix links on homepage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ url:
                 proven phonics method while Kindergarten students typically read on a third grade level by the end of
                 the year.</p>
             <div class="uk-width-1-1 uk-text-center">
-                <a href="https://www.nsa.edu/undergraduate" class="uk-button uk-button-large uk-button-primary">Learn
+                <a href="preschool-k5" class="uk-button uk-button-large uk-button-primary">Learn
                     More</a>
             </div>
         </div>
@@ -45,7 +45,7 @@ url:
             <p class="uk-margin-remove-top">Grade school, or grammar school, is a time for developing structures that
                 reward self-control and personal discipline.</p>
             <div class="uk-width-1-1 uk-text-center">
-                <a href="https://www.nsa.edu/student-life/" class="uk-button uk-button-large uk-button-primary">Learn
+                <a href="lower-school" class="uk-button uk-button-large uk-button-primary">Learn
                     More</a>
             </div>
         </div>
@@ -56,7 +56,7 @@ url:
             <p class="uk-margin-remove-top">Attending high school at Oak Hill your son or daughter can study math
                 through Trigonometry and Calculus AP.</p>
             <div class="uk-width-1-1 uk-text-center">
-                <a href="https://www.nsa.edu/admissions/" class="uk-button uk-button-large uk-button-primary">Learn
+                <a href="upper-school" class="uk-button uk-button-large uk-button-primary">Learn
                     More</a>
             </div>
         </div>
