Convert homepage images to webp

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@ url:
     <!-- <video
         src="https://media.istockphoto.com/videos/elementary-school-kids-playing-on-climbing-net-in-playground-video-id1071490710"
         loop muted playsinline uk-video="autoplay: inview" uk-cover></video> -->
-    <img src="assets/images/IMG_2654.jpg" uk-cover>
+    <picture uk-cover>
+        <source type="image/webp" srcset="assets/images/IMG_2654.webp">
+        <source type="image/jpeg" srcset="assets/images/IMG_2654.jpg">
+        <img src="assets/images/IMG_2654.jpg" uk-cover>
+    </picture>
     <div class="uk-position-top">
         {% include navbar-transparent.html %}
     </div>
@@ -28,7 +32,11 @@ url:
     <div class="uk-grid-large uk-grid-match" uk-grid>
 
         <div class="uk-width-1-3@m">
-            <img src="assets/images/IMG_2656.jpg">
+            <picture>
+                <source type="image/webp" srcset="assets/images/IMG_2656.webp">
+                <source type="image/jpeg" srcset="assets/images/IMG_2656.jpg">
+                <img src="assets/images/IMG_2656.jpg">
+            </picture>
             <h3 class="uk-margin-remove-bottom">Kindergarten</h3>
             <p class="uk-margin-remove-top">Nearly all four year olds in our preschool program learn to read using our
                 proven phonics method while Kindergarten students typically read on a third grade level by the end of
@@ -40,7 +48,11 @@ url:
         </div>
 
         <div class="uk-width-1-3@m">
-            <img src="assets/images/IMG_9941.jpg">
+            <picture>
+                <source type="image/webp" srcset="assets/images/IMG_9941.webp">
+                <source type="image/jpeg" srcset="assets/images/IMG_9941.jpg">
+                <img src="assets/images/IMG_9941.jpg">
+            </picture>
             <h3 class="uk-margin-remove-bottom">Lower School</h3>
             <p class="uk-margin-remove-top">Grade school, or grammar school, is a time for developing structures that
                 reward self-control and personal discipline.</p>
@@ -51,7 +63,11 @@ url:
         </div>
 
         <div class="uk-width-1-3@m">
-            <img src="assets/images/IMG_0051.jpg">
+            <picture>
+                <source type="image/webp" srcset="assets/images/IMG_0051.webp">
+                <source type="image/jpeg" srcset="assets/images/IMG_0051.jpg">
+                <img src="assets/images/IMG_0051.jpg">
+            </picture>
             <h3 class="uk-margin-remove-bottom">Upper School</h3>
             <p class="uk-margin-remove-top">Attending high school at Oak Hill your son or daughter can study math
                 through Trigonometry and Calculus AP.</p>
@@ -116,7 +132,11 @@ url:
 
                     <ul class="uk-slideshow-items">
                         <li>
-                            <img src="assets/images/Washington.Nery.jpg" alt="" uk-cover>
+                            <picture uk-cover>
+                                <source type="image/webp" srcset="assets/images/Washington.Nery.webp">
+                                <source type="image/jpeg" srcset="assets/images/Washington.Nery.jpg">
+                                <img src="assets/images/Washington.Nery.jpg" uk-cover>
+                            </picture>
                             <div class="uk-position-cover uk-overlay uk-flex uk-flex-center uk-flex-middle uk-light"
                                 style="background-color:rgba(0,0,0,.3);">
                                 <div class="uk-margin-large">
@@ -130,7 +150,11 @@ url:
                         </li>
 
                         <li>
-                            <img src="assets/images/alumnus.png" alt="" uk-cover>
+                            <picture uk-cover>
+                                <source type="image/webp" srcset="assets/images/alumnus.webp">
+                                <source type="image/png" srcset="assets/images/alumnus.png">
+                                <img src="assets/images/alumnus.png" uk-cover>
+                            </picture>
                             <div class="uk-position-cover uk-overlay uk-flex uk-flex-center uk-flex-middle uk-light"
                                 style="background-color:rgba(0,0,0,.3);">
                                 <div class="uk-margin-large">
