--- a/preschool-k5.html
+++ b/preschool-k5.html
@@ -1,5 +1,5 @@
 ---
-layout: landing-page
+layout: image-title
 image: assets/images/preschool-kindergarten.webp
 title: Preschool and Kindergarten
 ---
