--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ url:
                     <p>You can hear stories about our faculty and students, listen to our podcasts, or see news and
                         upcoming
                         events from the school. </p>
-                    <a href="#" class="uk-button uk-button-large uk-button-primary">Blog</a>
+                    <a href="/blog" class="uk-button uk-button-large uk-button-primary">Blog</a>
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@ url:
 <div class="uk-section-primary">
     <div class="uk-container uk-padding uk-text-center">
         <h1>Enrollment is open. Apply Online Today.</h1>
-        <a href="#" class="uk-button uk-button-large uk-button-primary">Apply</a>
+        <a href="/apply" class="uk-button uk-button-large uk-button-primary">Apply</a>
     </div>
 </div>
 
