increment styles version

--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,7 @@ title: Latest Posts
                     </a>
                     <p class="uk-text-meta uk-margin-remove-top">{{ post.date | date: "%B %-d, %Y" }}</p>
                     <p>{{ post.excerpt }}</p>
+                    <p><a href="{{ post.url }}">Read more...</a></p>
                 </div>
             </div>
         </li>
