add application form

--- a/apply.html
+++ b/apply.html
@@ -5,11 +5,5 @@ title: Apply
 
 <div class="uk-container uk-margin-large-top uk-margin-large-bottom">
     <p>Fill out this application form and pay your application fee online to secure a spot.</p>
-    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-    <script>
-        hbspt.forms.create({
-            portalId: "7691200",
-            formId: "29c43282-65d1-44b1-b83d-3bc7ac6a37a5"
-        });
-    </script>
+    <iframe src="https://form.jotform.com/201326560180041" class="uk-width-1-1" height="1024"></iframe>
 </div>
