--- a/apply.html
+++ b/apply.html
@@ -5,5 +5,5 @@ title: Apply
 
 <div class="uk-container uk-margin-large-top uk-margin-large-bottom">
     <p>Fill out this application form and pay your application fee online to secure a spot.</p>
-    <iframe src="https://form.jotform.com/201326560180041" class="uk-width-1-1" height="1024"></iframe>
+    <script type="text/javascript" src="https://form.jotform.com/jsform/201326560180041"></script>
 </div>
