--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ url:
                 <h1 class="uk-light">A Classical and Christian School</h1>
                 <div class="uk-light">
                     <a href="apply"
-                        class="uk-display-inline-block uk-button uk-button-large uk-button-primary">Apply</a>
+                        class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary">Apply</a>
                     <a href="visit"
-                        class="uk-display-inline-block uk-button uk-button-large uk-button-primary">Visit</a>
-                    <a href="#contact" class="uk-display-inline-block uk-button uk-button-large uk-button-primary"
+                        class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary">Visit</a>
+                    <a href="#contact" class="uk-margin-small-top uk-display-inline-block uk-button uk-button-large uk-button-primary"
                         uk-scroll>Contact</a>
                 </div>
             </div>
