edit international tuition

--- a/international-admissions-tuition.html
+++ b/international-admissions-tuition.html
@@ -6,9 +6,8 @@ title: International Admissions and Tuition
 <div class="uk-container uk-margin-large-bottom">
 
     <h3>2019-20 Tuition and Fees</h3>
-    <p>Registration Fee before February 1, 2019: $300<br>
-    Registration Fee February 1 - April 30: $500<br>
-    Registration Fee as of May 1: $600</p>
+    <p>Please call or email for our current tuition schedule.</p>
+    <a class="uk-button uk-button-large uk-button-primary" href="index#contact">Request Tuition Schedule</a>
 
     <h4>International Student Tuition and ESL, Grades 1-12: $21,500</h4>
 
