--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@ url:
                 <img src="assets/images/IMG_0051.jpg">
             </picture>
             <h3 class="uk-margin-remove-bottom">Upper School</h3>
-            <p class="uk-margin-remove-top">Attending high school at Oak Hill your son or daughter can study math
-                through Trigonometry and Calculus AP.</p>
+            <p class="uk-margin-remove-top">Students refine writing and speaking skills through classroom discussions and reading original sources.</p>
             <div class="uk-width-1-1 uk-text-center">
                 <a href="upper-school" class="uk-button uk-button-large uk-button-primary">Learn
                     More</a>
