--- a/apply.html
+++ b/apply.html
@@ -4,6 +4,20 @@ title: Apply
 ---
 
 <div class="uk-container uk-margin-large-top uk-margin-large-bottom">
-    <p>Fill out this application form and pay your application fee online to secure a spot.</p>
+    <p>New students please email the following documents to <a href="mailto:office@oakhillk12.com">office@oakhillk12.com</a>:</p>
+    <ol>
+        <li>Current report card if entering first grade or higher.</li>
+        <li>Also include the previous year's report card if entering second grade or higher.</li>
+        <li>Students entering high school should include records of all credits earned.</li>
+        <li>Standardized test scores if available.</li>
+        <li>A copy of your most recent Virginia health form may be included with this application or sent later.</li>
+    </ol>
+
+    <p>By signing the online application, you indicate the following:</p>
+    <ol>
+        <li>You have received the 2020-2021 tuition schedule and agree to the terms and conditions.</li>
+        <li>You authorize Oak Hill Christian School to obtain medical care deemed necessary for your child in the event that you cannot be located immediately.</li>
+        <li>Pictures and videos of your child may be included in materials such as school yearbooks, websites, and promotional materials.</li>
+    </ol>
     <iframe class="uk-width-1-1" height="1024" src="https://oak-hill-forms.herokuapp.com/forms/"></iframe>
 </div>
