--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ url:
                     style="margin:0;position:relative;top:50%;-ms-transform: translateY(-50%);transform: translateY(-50%);">
                     <p>You can hear stories about our teaachers and students, or see news and upcoming events from the
                         school.</p>
-                    <a href="/blog" class="uk-button uk-button-large uk-button-primary">Blog</a>
+                    <a href="http://oakhillk12.blogspot.com/" class="uk-button uk-button-large uk-button-primary">Blog</a>
                 </div>
             </div>
         </div>
