change header video

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ url:
 ---
 
 <div class="uk-inline@m uk-width-1-1 uk-overflow-hidden">
-    <video id="header-background" class="uk-width-1-1@m uk-background-secondary" src="assets/video/MVI_3031.mov" loop
+    <video id="header-background" class="uk-width-1-1@m uk-background-secondary" src="assets/video/header.mp4" loop
         muted playsinline uk-video="autoplay: inview" style="object-fit: cover; max-height: 760px;"></video>
     <div id="header-content" class="uk-overlay uk-position-bottom">
         <div class="uk-container">
