--- a/current-students.html
+++ b/current-students.html
@@ -5,9 +5,11 @@ title: Current Students
 
 <div class="uk-container uk-margin-large-top uk-margin-large-bottom">
     <h3>Jupiter Grades</h3>
-    <p>Parents or students can view grades or submit assignments through Jupiter Grades. <a href="https://login.jupitered.com/login/">Log in here</a>.</p>
+    <p>Parents or students can view grades or submit assignments through Jupiter Grades. <a href="https://login.jupitered.com/login/" target="_blank">Log in here</a>.</p>
     <h3>Making Payments</h3>
     <p>Checks can be mailed to Oak Hill Christian School at 13525 Dulles Tech Dr, Suite 101, Herndon, VA 20171 or left in the dropbox on the front desk.</p>
     <p>The registration fee can be paid via credit card if re-applying via the online application.</p>
     <p>Payments can also be sent using Zelle, however, keep in mind that most banks have a limit of ~$2000/day. If your bank supports Zelle, you can send payments to headmaster@oakhillk12.com.</p>
+    <h3>Online Classes</h3>
+    <p>Before class, your child's teacher will send out a link to join an <a href="https://www.adobe.com/products/adobeconnect/meetings.html" target="_blank">Adobe Connect</a> classroom. Use that link to join online classes.</p>
 </div>
