Updated by InferCMS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
-title: Home
 layout: transparent-navbar
-url:
 ---
 
 <div class="uk-inline@m uk-width-1-1 uk-overflow-hidden">
@@ -172,7 +170,7 @@ url:
             <div class="uk-text-center">
                 <div class="uk-padding"
                     style="margin:0;position:relative;top:50%;-ms-transform: translateY(-50%);transform: translateY(-50%);">
-                    <p>You can hear stories about our teaachers and students, or see news and upcoming events from the
+                    <p>You can hear stories about our teachers and students, or see news and upcoming events from the
                         school.</p>
                     <a href="http://oakhillk12.blogspot.com/" class="uk-button uk-button-large uk-button-primary">Blog</a>
                 </div>
