change copy on virtual tour

--- a/virtual-tour.html
+++ b/virtual-tour.html
@@ -5,8 +5,8 @@ title: Virtual Tour
 ---
 
 <div class="uk-margin-large-top uk-margin-large-bottom uk-container uk-container-xsmall">
-    <p>Due to current world events beyond our control, we cannot host in person tours. Instead, we invite you to have a
-        look around our school through these videos and pictures.</p>
+    <h1>Welcome to our virtual tour!</h1>
+    <p>Have a look around our school through these videos and pictures.</p>
 </div>
 
 <div id="education" class="uk-overflow-hidden uk-background-norepeat uk-background-cover uk-background-blend-overlay"
