add fast logo to admissions page

--- a/admissions-tuition.html
+++ b/admissions-tuition.html
@@ -15,6 +15,7 @@ title: Admissions and Tuition
         commitment to the mission of the school. Awards may range from $1,000 to a full tuition scholarship. <a href="https://www.ismfast.com/FastPage.php?id=a6699551966bc485646630153c505e0c" target="_blank">Application
 				should be made online at this link with Independent School Management’s FAST program.</a> Once a confidential application has
         been completed FAST will make a recommendation to the school.</p>
+        <a href="https://www.ismfast.com/FastPage.php?id=a6699551966bc485646630153c505e0c" target="_blank"><img class="uk-width-small" src="{{ 'assets/images/fast-logo.png' | relative_url }}"></a>
 
     <h3>Deadlines</h3>
     <p>Early Application: January 31</p>
