change default picture size

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ layout: transparent-navbar
                     <ul class="uk-slideshow-items">`;
                     let add = ' class="uk-active uk-transition-active" style="transform: translate3d(0px, 0px, 0px);"'
                     items.forEach(el => {
-                        let thumbnail = 'assets/images/playground.png';
+                        let thumbnail = 'assets/images/playground square.png';
                         try {
                             thumbnail = el.querySelector('thumbnail').getAttribute('url').replace('s72-c', 's640-c');
                         } catch {
